<resources>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="app_name">IDPL_Mainline_PCMS</string>
    <string name="user">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="pims_mobility_module">IDPL_PCMS Mobility Module</string>
    <string name="powered_by_fps">Powered By - Unistal Systems Pvt. Ltd.</string>
    <string name="scan_pipe">Scan pipe</string>
    <string name="submit">Submit</string>
    <string name="d_o_no">D.O No.</string>
    <string name="d_o_details">Dispatch location</string>
    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_ionic">fontionic</string>
    <string name="three_dot">&#xf397;</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="select_align">"Select_Alignment"</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <string name="default_channel">Default channel</string>

    <string-array name="array_activity">
        <item>Stringing</item>
        <item>Welding</item>
        <item>Lowering</item>
        <item>Welding NDT</item>
    </string-array>
</resources>
