<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><!--<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:background="@color/fade_color"
            android:gravity="center"
            android:text="@string/pims_mobility_module"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            app:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/iocl"
            app:layout_constraintBottom_toTopOf="@+id/text_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_header"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/user"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:typeface="sans"
            app:fontFamily="sans-serif"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/enter_user_name"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/user"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textSize="@dimen/_12sdp"
            android:typeface="sans"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_name" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_drawable"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_5sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/btn_drawable"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:background="@color/fade_color"
            android:gravity="center"
            android:text="@string/powered_by_fps"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<!--
</layout>
-->
